# rubiks_cube

./: .ai-quickref.md  .clinerules  CONTRIBUTING.md  LICENSE  Pipfile  README.md  cube_model.py  cube_renderer.py  pyproject.toml  rubiks_cube.py
tests/: test_cube_model.py
