[project]
name = "rubiks-cube"
version = "0.1.0"
description = ""
authors = [
    {name = "LoboGuardian 🐺",email = "loboguardian.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.4,<3.0.0",
    "PyOpenGL>=3.1.0",
    "PyOpenGL-accelerate>=3.1.0",
    "pygame-ce>=2.5.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
